# ChangeLog for x11-proto/xproto
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.102 2010/11/20 16:14:33 scarabeus Exp $

  20 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> -xproto-7.0.18.ebuild:
  old

*xproto-7.0.19 (03 Nov 2010)

  03 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> +xproto-7.0.19.ebuild:
  Version bump

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xproto-7.0.16.ebuild:
  old

  21 Oct 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking xproto-7.0.17 ppc stable for bug 239063

  28 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> xproto-7.0.17.ebuild:
  ppc64 stable wrt #327777

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> xproto-7.0.17.ebuild:
  ia64/s390/sh/sparc stable wrt #327777

  12 Sep 2010; Tobias Klausmann <klausman@gentoo.org> xproto-7.0.17.ebuild:
  Stable on alpha, bug #327777

*xproto-7.0.18 (10 Aug 2010)

  10 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xproto-7.0.10.ebuild, -xproto-7.0.14.ebuild, -xproto-7.0.15.ebuild,
  +xproto-7.0.18.ebuild:
  Version bump.

  22 Jul 2010; Markus Meier <maekke@gentoo.org> xproto-7.0.17.ebuild:
  arm stable, bug #327777

  14 Jul 2010; Jeroen Roovers <jer@gentoo.org> xproto-7.0.17.ebuild:
  Stable for HPPA (bug #327777).

  13 Jul 2010; Christian Faulhammer <fauli@gentoo.org> xproto-7.0.17.ebuild:
  x86 stable, bug 327777

  12 Jul 2010; Markos Chandras <hwoarang@gentoo.org> xproto-7.0.17.ebuild:
  Stable on amd64 wrt bug #327777

  14 Jun 2010; Fabian Groffen <grobian@gentoo.org> xproto-7.0.17.ebuild:
  Marked ~x64-macos, bug #323945

*xproto-7.0.17 (16 May 2010)

  16 May 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xproto-7.0.17.ebuild:
  Version bump.

  25 Feb 2010; Jonathan Callen <abcd@gentoo.org> xproto-7.0.16.ebuild:
  Transfer prefix keywords (no other changes)

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> xproto-7.0.16.ebuild:
  s390 stable wrt #294958
