@@ -1,6 +1,8 @@
 DIST xproto-7.0.17.tar.bz2 172382 RMD160 50cfe7897939a7430ad128007468553183360ff4 SHA1 9821548b24f812524bcf4db61a773997fece2447 SHA256 9b2c1fdc5b3780cedc9f5d9caf8f1364f26d07f8502b0eccdde74319157f9d01
 DIST xproto-7.0.19.tar.bz2 268986 RMD160 bc990beca0aa7d8a1b5c110ed4e64aca3669fe81 SHA1 c080da482474dd422cb90b52202bd616cf0854e1 SHA256 47b14f6da8c57a726ef1cfa5964a4a6cf9505bc6d78f69d3ae89f4b19956fc2a
+DIST xproto-7.0.20.tar.bz2 277229 RMD160 3b500ef0eefd67864368c0e16d63812c650e395b SHA1 a55d051c8ad9c50e90429c9319d6d3af821f0696 SHA256 3fe87fe47d9b795e60ba3715d71f90f9929d57e9048f1d2a6ebb558e5aee9e2a
 EBUILD xproto-7.0.17.ebuild 665 RMD160 56f2c2c71ef1c17b3e98e2a3dfccc38437e0cbd3 SHA1 9487300f726cce4fefd00b22ecfc8d99ce19688b SHA256 a9c37a620401a0837fbc467351f27a38a091278e6ee7d3fb63c33cfa0659fb74
 EBUILD xproto-7.0.19.ebuild 756 RMD160 87cf9565983f20551ead8c456c42d2e3cf47bc14 SHA1 6bfacc63891bdf5a09172b9eb1d5866bb8276412 SHA256 98b6fb759279774b4f66573c8181ca27974115d7e56519795844839e530e8531
-MISC ChangeLog 11885 RMD160 b00cc28d6251d035e3bc4c84cd92343f2e70ecbf SHA1 f9aadc3274531496a418ff187afc8b22c296ef9f SHA256 7461920d1b2d1ed0df0d82eb0e1c1b4e0e31b8d10e84e1aab3c08fe1568ca92d
+EBUILD xproto-7.0.20.ebuild 756 RMD160 b4ec8449309ded8314afb02314d000a198e6b27f SHA1 2b5ed0e5dcb32556bc85217173c1232e5278c9f4 SHA256 2c0b9cb99635c4676eff2791d58621c8289eefaecbcf228714e5019aff3ed57a
+MISC ChangeLog 12009 RMD160 292094faa71418a8ec0cdbbb41f9d67740766235 SHA1 f97bab7136342d251ab1e259b0eb7763dd6566e1 SHA256 56e49cf7e0c3ee7003842c73a0e67a44a9c420db0bd2f8e006588ce7b4ad4cae
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
