@@ -1,6 +1,11 @@
 # ChangeLog for x11-proto/xproto
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.102 2010/11/20 16:14:33 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.103 2010/12/10 19:00:16 scarabeus Exp $
+
+*xproto-7.0.20 (10 Dec 2010)
+
+  10 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> +xproto-7.0.20.ebuild:
+  Version bump
 
   20 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> -xproto-7.0.18.ebuild:
   old
